--- a/stable-coin-paper/setup/table.tex
+++ b/stable-coin-paper/setup/table.tex
@@ -30,39 +30,36 @@
 \textbf{Class} & \textbf{Mechanism} & \textbf{Resembles} & Rank \\  \hline
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 \multirow{17}{*}{Backed}		
-						& \multirow{8}{*}{Directly-Backed \& Redeemable$^{\dagger}$}		& USDC 			& 20 \\ \cline{3-4}
-						&														& TrueUSD 		& 26 \\ \cline{3-4}	
-						&														& Paxos 			& 38 \\ \cline{3-4}												
-						&														& Gemini Dollar 	& 52 \\ \cline{3-4}
-						&														& StableUSD (USDS) & 685 \\ \cline{3-4}
-						&														& Stronghold USD 	& 891 \\ \cline{3-4}
-						&														& Petro 			& 1210 \\ \cline{3-4}
+						& \multirow{8}{*}{Directly-Backed \& Redeemable$^{\dagger}$}	& USDC 			& 20 \\ \cline{3-4}
+						&													& TrueUSD 		& 26 \\ \cline{3-4}	
+						&													& Paxos 			& 38 \\ \cline{3-4}		
+						&													& Gemini Dollar 	& 52 \\ \cline{3-4}
+						&													& StableUSD (USDS) & 685 \\ \cline{3-4}
+						&													& Stronghold USD 	& 891 \\ \cline{3-4}
+						&													& Petro 			& 1210 \\ \cline{3-4}
 						&	& \multicolumn{1}{p{5cm}|}{Ekon, WBTC, emparta} & $\perp$ \\ \cline{2-4}
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
-						& \multirow{6}{*}{Directly-Backed}  								& Tether 			& 6 \\ \cline{3-4}
-						&														& EURSToken 		& 95 \\ \cline{3-4}
-						&														& BitCNY 			& 304 \\ \cline{3-4}
-						&														& Terracoin 		& 1280 \\ \cline{3-4}
-						&														& Saga 			& 1495 \\  \cline{3-4}
+						& \multirow{6}{*}{Directly-Backed}  							& Tether 			& 6 \\ \cline{3-4}
+						&													& EURSToken 		& 95 \\ \cline{3-4}
+						&													& BitCNY 			& 304 \\ \cline{3-4}
+						&													& Terracoin 		& 1280 \\ \cline{3-4}
+						&													& Saga 			& 1495 \\  \cline{3-4}
 						&	& \multicolumn{1}{p{5cm}|}{GJY, Novatti AUD, UPUSD} & $\perp$ \\ \cline{2-4} 						
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
-						& \multirow{3}{*}{Indirectly-Backed}								& Dai 			& 57 \\ \cline{3-4}
-                                                &														& BitUSD 			& 398 \\  \cline{3-4}
-                                                & 														& Nomin			& $\perp$ \\ \cline{1-4}
+						& \multirow{3}{*}{Indirectly-Backed}							& Dai 			& 57 \\ \cline{3-4}
+                                                &													& BitUSD 			& 398 \\  \cline{3-4}
+                                                & 													& Nomin			& $\perp$ \\ \cline{1-4}
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
-\multirow{8}{*}{Intervention}                                                           
-						& \multirow{1}{*}{TBD: Currency Board} 							& Nubits* 			& 892 \\ \cline{2-4}
+ \multirow{5}{*}{Intervention}                                                           
+						& \multirow{1}{*}{Market Manipulation} 						& NuBits* 			& 892 \\ \cline{2-4}
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
-						& \multirow{1}{*}{TBD: Contract/Expand}  						& Ambleforth		& $\perp$  \\ \cline{2-4}
+						& \multirow{2}{*}{Money Supply Adjustments}  				& Ambleforth		& $\perp$  \\ \cline{3-4}
+						&   													& RSCoin 			& $\perp$  \\ \cline{2-4}
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
-						& \multirow{2}{*}{TBD: Managed}  								& RSCoin 			& $\perp$  \\ \cline{3-4}
-						&														&  				& $\perp$ \\ \cline{2-4}
+						& \multirow{2}{*}{Asset Transfer}  							& CarbonUSD		& 1262 \\ \cline{3-4}
+						&													& Basecoin 		& $\perp$ \\ \cline{1-4}
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
-						& \multirow{2}{*}{TBD: Seignorage Shares}  						& CarbonUSD		& 1262 \\ \cline{3-4}
-						&														& Basecoin 		& $\perp$ \\ \cline{2-4}
-% = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
-						& \multirow{2}{*}{TBD: Internal }  								& Nautiluscoin 		& $\perp$ \\ \cline{3-4}
-						&														&  				& $\perp$ \\ \cline{2-4}
+%						& \multirow{2}{*}{TBD: Internal }  								& Nautiluscoin 		& $\perp$ \\ \cline{3-4}
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 \hline
 \end{tabular}
