Evaluation framework intro + ref/edits

--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -226,5 +226,12 @@ note = {(Accessed on 02/12/2019)}
   year={2019}
 }
 
+@inproceedings{Eskandari2019SoKTD,
+ title={SoK: Transparent Dishonesty: front-running attacks on Blockchain},
+ author={Shayan Eskandari and Seyedehmahsa Moosavi and Jeremy Clark},
+ year={2019},
+ booktitle={International Conference on Financial Cryptography and Data Security},
+ organization={Springer}
+}
 
 
