--- a/stable-coin-paper/setup/table.tex
+++ b/stable-coin-paper/setup/table.tex
@@ -53,7 +53,7 @@
  \multirow{5}{*}{Intervention}                                                           
 						& \multirow{1}{*}{Market Manipulation} 						& NuBits* 			& 892 \\ \cline{2-4}
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
-						& \multirow{2}{*}{Money Supply Adjustments}  				& Ambleforth		& $\perp$  \\ \cline{3-4}
+						& \multirow{2}{*}{Money Supply Adjustments}  				& Ampleforth		& $\perp$  \\ \cline{3-4}
 						&   													& RSCoin 			& $\perp$  \\ \cline{2-4}
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 						& \multirow{2}{*}{Asset Transfer}  							& CarbonUSD		& 1262 \\ \cline{3-4}
