--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -407,8 +407,8 @@ In this Section, we review various issues with different mechanisms of designing
 
 
 \begin{table}[htb!]
-	\centering
-	\begin{tabular*}{0.9\textwidth}{@{\extracolsep{\fill}} lcccccccc}
+	
+	\begin{tabular*}{0.9\textwidth}{@{\extracolsep{\fill}} lllllllll}
 		
 		&
 		&
@@ -422,18 +422,18 @@ In this Section, we review various issues with different mechanisms of designing
 		
 		\hline
 		
-		\textit{Mechanism}  &   \textit{Resembles}  &  \multicolumn{2}{|c|}{Stability} &  \multicolumn{4}{c|}{Trust} &  \multicolumn{1}{c}{Risks} \\
+		\textit{Mechanism}  &   \textit{Resembles}  &  \multicolumn{2}{|c|}{Price Stability} &  \multicolumn{4}{c|}{Trust} &  \multicolumn{1}{c}{Risks} \\
 		
 		\hline
 		
-		Directly Backed and Redeemable	 &&\full&\full      \\
-		Directly Backed                      \\
-		Indirectly Backed                                  \\
-		Currency Board                                        \\
-		Contract Expand                                        \\
-		Managed                                                   \\
-		Seignorage Shares	                                     \\
-		Internal                                                        \\
+		Directly Backed and Redeemable	 &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{\full }   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\ 
+		Directly Backed                                 &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\  
+		Indirectly Backed                                &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\    
+		Currency Board                                  &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\     \hline
+		Contract Expand                                  &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\   
+		Managed                                             &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\   
+		Seignorage Shares	                               &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\    
+		Internal                                                    &  & \multicolumn{1}{|p{1cm}|}{\full} & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\  
 		\hline
 		
 	\end{tabular*}
