--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -360,7 +360,7 @@ Next we consider stablecoins that are directly-backed---exactly as in the previo
 %==========================================%
 \section{Evaluation Framework}
 
-In this Section, we review various issues with different mechanisms of designing a stablecoin (discussed in Sections~\ref{sec:t1} and~\ref{sec:t2}) . We provide an evaluation framework based on x (\textblue{to be filled}) criteria (see Table~\ref{tab:evframework}) that evaluates each mechanism's core ideas and trust model. The columns and rows of the table are the evaluation criteria and mechanisms respectively. This framework provides a summary of advantages and disadvantages of different mechanisms for creating stablecoins. 
+In this Section, we review various issues with different mechanisms of designing a stablecoin (discussed in Sections~\ref{sec:t1} and~\ref{sec:t2}) . We provide an evaluation framework based on x (\textblue{to be filled}) criteria (see Table~\ref{tab:evframework}) that evaluates each mechanism's core ideas and trust model. The columns and rows of the table are the evaluation criteria and mechanisms respectively. This framework provides a summary of advantages and disadvantages of different mechanisms for creating stablecoins.
 
 
 %===========Version1============%
@@ -404,7 +404,7 @@ In this Section, we review various issues with different mechanisms of designing
 %
 %\end{table}
 %===============Version2===================%
-
+\newcolumntype{N}{>{\centering\arraybackslash}m{.45in}}
 
 \begin{table}[htb!]
 	
@@ -426,14 +426,14 @@ In this Section, we review various issues with different mechanisms of designing
 		
 		\hline
 		
-		Directly Backed and Redeemable	 &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{\full }   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\ 
-		Directly Backed                                 &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\  
-		Indirectly Backed                                &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\    
+		Directly Backed and Redeemable	 &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{\full }   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
+		Directly Backed                                 &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
+		Indirectly Backed                                &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
 		Currency Board                                  &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\     \hline
-		Contract Expand                                  &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\   
-		Managed                                             &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\   
-		Seignorage Shares	                               &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\    
-		Internal                                                    &  & \multicolumn{1}{|p{1cm}|}{\full} & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\  
+		Contract Expand                                  &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
+		Managed                                             &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
+		Seignorage Shares	                               &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
+		Internal                                                    &  & \multicolumn{1}{|N|}{\full} & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
 		\hline
 		
 	\end{tabular*}
