--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -411,7 +411,7 @@ In this Section, we review various issues with different mechanisms of designing
 	\begin{tabular*}{0.9\textwidth}{@{\extracolsep{\fill}} lllllllll}
 		
 		&
-		&
+		
 		\headrow{Stable to undervaluation} &
 		\headrow{Stable to overvaluation} &
 		\headrow{No issuance violation} &
@@ -422,22 +422,23 @@ In this Section, we review various issues with different mechanisms of designing
 		
 		\hline
 		
-		\textit{Mechanism}  &   \textit{Resembles}  &  \multicolumn{2}{|c|}{Price Stability} &  \multicolumn{4}{c|}{Trust} &  \multicolumn{1}{c}{Risks} \\
+		\textit{Mechanism}  &    \multicolumn{2}{|c|}{Price Stability} &  \multicolumn{4}{c|}{Trust} &  \multicolumn{1}{c}{Risks} \\
 		
 		\hline
 		
-		Directly Backed and Redeemable	 &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{\full }   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
-		Directly Backed                                 &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
-		Indirectly Backed                                &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
-		Currency Board                                  &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\     \hline
-		Contract Expand                                  &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
-		Managed                                             &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
-		Seignorage Shares	                               &  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
-		Internal                                                    &  & \multicolumn{1}{|N|}{\full} & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
+		Directly Backed and Redeemable	  & \multicolumn{1}{|c|}{\full } & \multicolumn{1}{c|}{ \full }   & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
+		Directly Backed                                   & \multicolumn{1}{|c|}{ } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
+		Indirectly Backed                                 & \multicolumn{1}{|c|}{ } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\      \hline
+%		Currency Board                                  &  & \multicolumn{1}{|c|}{ } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
+		Market Manipulation                                    & \multicolumn{1}{|c|}{ } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
+		Money Supply Adjustments                                              & \multicolumn{1}{|c|}{ } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
+		Asset Transfer	                                 & \multicolumn{1}{|N|}{ } & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} &   \\
+	
 		\hline
+		%p{1cm}
 		
 	\end{tabular*}
-	\caption{Evaluation Framework Version 2.\label{tab:evframework}}
+	\caption{Evaluation Framework.\label{tab:evframework}}
 	
 \end{table}
 %=============%
