--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -363,9 +363,6 @@ Next we consider stablecoins that are directly-backed---exactly as in the previo
 In this Section, we review various issues with different mechanisms of designing a stablecoin (discussed in Sections~\ref{sec:t1} and~\ref{sec:t2}) . We provide an evaluation framework based on x (\textblue{to be filled}) criteria (see Table~\ref{tab:evframework}) that evaluates each mechanism's core ideas and trust model. The columns and rows of the table are the evaluation criteria and mechanisms respectively. This framework provides a summary of advantages and disadvantages of different mechanisms for creating stablecoins.
 
 
-
-
-
 \begin{table}[htb!]
 	
 	\begin{tabular}{ lllllllll}
@@ -447,66 +444,14 @@ In this Section, we review various issues with different mechanisms of designing
 % Which blockchain
 
 \subsection{What Stability looks like}\label{sec:stability}
-\subsection{Ethereum's Gas}\label{sec:GasInvs}
 
-% In Ethereum blockchain, every transaction contains a number of operations and there is a precise amount of gas unit associated with each.\footnote{http://ethdocs.org/en/latest/contracts-and-transactions/account-types-gas-and-transactions.html\#what-is-gas} Since Ether is volatile, this concept is introduced to have fixed cost for operations.
+\subsection{Ethereum Gas Investigation}\label{sec:GasInvs}
 
-% Thus, even though the price of Ether changes, the amount of Ether corresponding to a unit of gas decreases; so that users pay the same price for the transactions on the Ethereum blockchain. Hence, the notion of gas is yet to be investigated to find out whether it exhibits behavior similar to fiat currencies or cryptocurrencies.
-
-% Gas: non-redeemable backed by Ether. like putting Ether in the contract and get USD digital token. why non-redeemable? because you burn Gas to get your digital tokens.
-% Depending on how much the user wants to pay for ecah unit of Gas, this will determine how expensive the tx is in Ether.
-% Gas is internal to the Ethereum blockchain and users cannot hold it, instead they can have Ethere, BUT the conversion rate between Gas and Ether changes over time and that's why there are huge spikes in the average Gas price plots.
-% But we can make Gas redeemable, there is a way in Ethereum to do that, the GasToken that uses this strategy. It allows you to stockpile and trade Ethereum Gas.
-% Gas is not a currency so you cannot buy things with it BUT you can turn it into a currency : having a smart contract and swaps it with other tokens
-% Gas is actually stable with respect to others, the reason it's not obvious is human error and their wrong mental model
-% Gas is not pegged to anything
-% Gas is free floating but it’s driven (governed) by market forces (auctioning off)
-% there is an upper band and lower band for Gas
-% So in this section we look into how to trade Gas and its derivatives?
-
-%=======GasToken details=======%
-% Operations that modify the global state of the Ethereum blockchain are very expensive \ie writing into a contract storage.
-% Ethereum motivates the user to free up space on the blockchain by refunding the Gas if they delete their contracts. This is what GasToken does.
-% GasToken is a smart contract that for the first time allows Ethereum users to buy and sell gas by tokenizing gas on the network. \footnote{https://github.com/projectchicago/gastoken}
-% They allow users to store Gas when it is cheap and use it once its price goes up.
-% Gas price refers to the amount of Ether you’re willing to pay for every unit of gas.
-% When a user stores cheap Gas, he can later spend that Gas to send a tx, that means now he pays for less gas for that tx to go through.
-% GasToken allows a transaction to do the same amount of work and pay for less gas, saving on miner fees and costs and allowing users to bid higher gas prices without paying correspondingly higher fees.
-%The gas tokens works on taking advantage of storage refund concept in ethereum, to inspire smart contracts to delete storage variable, ethereum network provides refund when storage variable is deleted up to half of the contract transaction.
-	% If a variable is changed from zero to a non-zero value, there is a gas fee  (writing into the storage is a very very expensive operation because it's altering the global state)
-	% If a variable is changed from a non-zero value to zero, there is a gas refund
-% A user can:
-	% Mint tokens when GasPrice is low: change a variable from a zero value to non-zero.
-	% Burn tokens when GasPrice is high: change a variable from non-zero to zero.
-
-% As mentioned, the gas refunded from freeing some storage space is less than the initial gas cost of storing the data on-chain in the first place, so why would someone want to do this? Well, you can create these GasTokens (filling an array with ones or creating a bunch of contracts) at a time t with a low gas price (e.g. 2 Gwei) and later consume these GasTokens in a transaction that has a higher gas price. Hence, half of your gas used for the expensive transaction effectively costs you 2 Gwei, while the other half costs 50 Gwei. Even if you don’t get back as much gas as you spent creating these GasTokens, the difference in gas price can make it worth it.
-
-% IMPORTANT: How is the mechanic? 1) when the Gas price is low, user calls the gastoken contract and asks it to store a bunch of words, this costs a lot of gas but because gas is cheap it will only cost a few cents for the user. 2) later in the future, where the user wants to register a domain and the gas price is so expensive, user will create a tx and within that he does 2 things: (i) register the domain she wants and (ii) ask gastoken contract to remove those words she's stored before.
-
-%=================%
-% Freeing up many storage slots in one transaction can quickly result in the refund counter surpassing half of the full transaction cost. In such a case or in case of self-destructs which can lead to a high refund counter as well we should evaluate how much of the refund can actually be used, as the refund can be at most half of the transaction cost. {The refund that has been accumulated cannot exceed half the gas used up during computation because miners need incentives to correctly execute your txs, and they should not pay Gas for your txs.} Thus freeing up storage slots or deleting contracts can make more sense in combination with other operations if possible (Gas Cost Analysis for Ethereum Smart Contracts: Zurich)
-% Refund balance: It is the amount to be refunded to the sender account post transaction execution. Storage in Ethereum is quite expensive, so there is an SSTORE instruction in Ethereum that is used as a refund counter. The refund counter starts at zero (no refund state) and gets incremented every time the transaction or contract deletes something from the storage. Please note that this refund amount is different and in addition to the unused gas that gets refunded to the sender.
-% In solidity, there are two commands which ensure that you get some gas refund back.
-	% SUICIDE: This basically kills the smart contract. Doing so will get you back 24000 gas.
-	%SSTORE: Storage deletion, which gets you back 15,000.
-%=================%
-% since minting new coin burns gas, you can just show up and give your gas token (and burn that) and ask the system to use that gas to mint new tokens. If you burn one gas token for one coin, it's pointless. But they could mint 1.5 coin using that gas token.
-
-% Gas is a measure of computation, and the question we have to ask is is the price of computation stable?
-% Hypothesis 1: Gas will look like exactly like Ether (cause it's Ethereum internal things),2 : looks like USD, because it should always cost 5 dollars to looked up an array (because the electricity cost is the same), 3- so it looks like electricity. There is a lot of reasons why things should converge, because of users incorrect mental model. They just can accept whatever their Ethereum client suggests, how this ethereum client gets those numbers? is it a real time or based on statistics? it can be gamed: sth like wash trade to make Gas cheaper (making it expensive is harder). What they could do is never broadcast it to the network so that nobody can put that in their block (causE THEy dont have the original tx to validate). So this way miner can keep those transactions in his private mempool and broad cast the whole block with that tx.
-
-
-
-%=================IMPORTANT=================%
-%=====Thoughts on GasToken used by Arbitrage for Font-running=======%
-% arbitrage on the Ethereum network can use GasToken-like techniques. Arbitrage bots try to run the txs all the time and as soon as they see an opportunity to font-run some exchnage tx and make some money (~\cite{Eskandari2019SoKTD}) so if they can lower their tx fees even a little bit, it extends the margins they can make (which txs are beneficial for them to front-run).
-
-
-%========GasPrice Plots Explanation:=========%
-
-The two spikes in the Fig~\ref{fig:gas} correspond to (i) January 2018 when Cryptokitties \footnote{Cryptokitties website \url{https://www.cryptokitties.co/}} was launched for the first time and (ii) when the FCOIN \footnote{Fcoin website \url{https://www.fcoin.com}} was launched and required a lot of on-chain voting. Both these events have caused the GasPrice to go up as Ethereum users had to pay more Gas for their transactions to go through.
-
-% Important note: If some companies (for example Fcoin) knows that they're gonna be sending lots of txs to the network that will definitely increase the Gas price in the future, they can store this gastoken ahead of time and benefit from using cheap Gas when the price is up.
+Ethereum transactions contain a number of operations with which there are small amount of Ether called \textit{gas} associated.\footnote{http://ethdocs.org/en/latest/contracts-and-transactions/account-types-gas-and-transactions.html\#what-is-gas} Fixed cost operations prevent Ethereum transaction fees from being exposed to the volatility of Ether. So even though the price of Ether changes, the amount of Ether corresponding to a unit of gas decreases and users pay the same price for the transactions they send on the Ethereum blockchain. 
+Figure~\ref{fig:gas} shows the average gas price changes with respect to Ether, Bitcoin, and Electricity from January 2018 to August 2018. As it can be seen in these plots, gas is relatively stable in price. The two spikes in this Figure correspond to (i) when the world's first Ethereum game, Cryptokitties \footnote{Cryptokitties website \url{https://www.cryptokitties.co/}} was first launched (February 2018) and increased the traffic on the network. (ii) When the China-based crypto exchange, FCOIN \footnote{Fcoin website \url{https://www.fcoin.com}} was first launched (July 2018) and required a lot of on-chain voting. Both these events have clogged up the Ethereum network and increased the gas price as users had to pay more gas for their transactions to go through. 
+Note that in these dates, gas price has not been changed against any of BTC, Eth, and Electricity. Alternatively, the price of gas itself changed without being related to any other external factors. Thus, it can be inferred that gas is relatively stable in price while it is not backed by anything. \par
+Although gas is a stable unit, it is not a currency so users cannot trade it. But we can we can turn gas  into a non-redeemable currency that is directly backed by Ether. In this case, users can burn gas by sending transactions to a smart contract and receive digital tokens in return. But how to turn Ethereum gas into a redeemable digital token? Ethereum is designed in such a way that it allows users to create a smart contract which stockpile and swaps gas with other tokens. \par
+Operations that store data on Ethereum blockchain modify its global state hence they are very expensive. So in order to incentivize users to free up space on the blockchain, Ethereum refunds the amount of gas users paid if they delete their smart contracts or stored data. \textbf{GasToken} is the first smart contract that tokenized gas on the Ethereum network.\footnote{https://github.com/projectchicago/gastoken} When the gas price is low (\eg 1 Gwei), users can store some data on the GasToken contract and create GasTokens, as mentioned, such transaction costs a lot of gas but it does not cost much in ETH or USD as the gas is cheap. Later when the gas price increases (\eg 50 Gwei), users can spend their GasTokens to pay for transactions. Thus, users benefit from paying for less gas and biding for higher \textsf{gasPrice} in their transactions. However, GasToken can also simplify the front-running attacks for arbitrage on the Ethereum network. In order to profit, arbitrage bots need to be fast traders and they constantly send transactions to the Ethereum network. So lower transaction fees (provided by GasTokens) simplifies the front-running attacks for them~\cite{Eskandari2019SoKTD}.
 
 
 %=========GasPlots========%
@@ -516,17 +461,13 @@ The two spikes in the Fig~\ref{fig:gas} correspond to (i) January 2018 when Cryp
 	\subfloat[Gas with respect to ETH and USD]{\includegraphics[width=0.45\textwidth]{figures/gas.pdf}\label{fig:gas1}}
 	\hfill
 	\subfloat[Gas with respect to ETH and Electricity price]{\includegraphics[width=0.52\textwidth]{figures/gasElectricity.pdf}\label{fig:gas2}}
-	\caption {Ethereum average GasPrice chart. As mentioned in the Section~\ref{sec:GasInvs}, the two spikes in the chart represent specific events happened in certain dates which have increased the GasPrice.}
+	\caption {Ethereum average gas price charts. As mentioned in the Section~\ref{sec:GasInvs}, the two spikes in the plots represent specific events happened in certain dates that blocked the Ethereum network and increased the gas price.}
 	\label{fig:gas}
 
 \end{figure}
 
 %========================%
-%=====Gas plots justification====%
 
-%BTC and Ether are the kind of the same, Elect and USD are kind of the same
-%Those two spikes in the gas plot are not because the change in the price of BTC, Ether, Elects. As mentioned, those changes are related to the specific events on the Etherum blockchain that increase the gas price on certain dates. In other words, the price of gas itself changed without being related to anything.
-% Everytime we plot gas with respect to anything we’ll have those spikes anyways, again because these changes are in the gas price itself.
 
 
 
